feat: added new blocks
